[package]
name = "messaging"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = "0.29.0"
serde = "1.0.152"
serde_json = "1.0.91"
async-trait = "0.1.60"
futures = "0.3.25"
tokio =  { version="1.23.0",  features= ["full"]}
tokio-test = { version="0.4.2" }
log = "0.4.8"
clap = "2.18.0"
env_logger = "0.10.0"
chrono = "0.4.0"
#![feature(auto_trait)]

[build-dependencies]
serde_derive = "1.0.152"    